--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "cypress",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Ranveer",
-  "license": "ISC",
   "devDependencies": {
-    "cypress": "^12.17.0"
+    "@playwright/test": "^1.52.0",
+    "@types/node": "^22.15.18"
+  },
+  "scripts": {},
+  "dependencies": {
+    "puppeteer": "^24.8.2"
   }
 }
